fixed and spacing on footer

--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ Grocery List
   box-shadow: var(--light-shadow);
   transition: var(--transition);
   padding: 2rem;
+  margin-bottom: 64px;
 }
 .section-center:hover {
   box-shadow: var(--dark-shadow);
@@ -354,7 +355,7 @@ Grocery List
   color: var(--clr-red-dark);
 }
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   
